* completed the `Running Scenarios In Parallel` section of the README